--- a/la_rapublica_news_scraper.ipynb
+++ b/la_rapublica_news_scraper.ipynb
@@ -1,31 +1,86 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": "# Prepare our Environment",
+   "metadata": {
+    "cell_id": "610f2ca6624449ed9cf826cd4d0db039",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 82
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "Libraries:\n\n- request: An elegant and simple HTTP library for Python, built for human beings. Behold, the power of Requests\n\n- lxml: To use XPath inside Python\n\n- autopep8: format our code to have oficial styles of the language",
+   "metadata": {
+    "cell_id": "af3a0f55b277416786bbde238724e61d",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 176
+   }
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "tags": [],
     "cell_id": "3a60fb8e-2461-43f1-9d43-149101632bb1",
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "cdaf08e8",
-    "execution_start": 1649120786852,
-    "execution_millis": 7,
-    "deepnote_cell_type": "code"
+    "source_hash": "9404c8c6",
+    "execution_start": 1649121699889,
+    "execution_millis": 1454,
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 197
    },
-   "source": "print('Start')",
-   "execution_count": 1,
+   "source": "pip install request lxml autopep8",
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
-     "text": "Start\n",
+     "text": "\u001b[31mERROR: Could not find a version that satisfies the requirement request (from versions: none)\u001b[0m\u001b[31m\n\u001b[0m\u001b[31mERROR: No matching distribution found for request\u001b[0m\u001b[31m\n\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
      "output_type": "stream"
     }
    ]
   },
   {
    "cell_type": "code",
-   "source": "",
    "metadata": {
     "cell_id": "f5e923741f474afe8f9ab503736daae0",
+    "tags": [],
+    "deepnote_to_be_reexecuted": false,
+    "source_hash": "17f17d0b",
+    "execution_start": 1649121685830,
+    "execution_millis": 7716,
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 337
+   },
+   "source": "pip install pip --upgrade",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": "Collecting pip\n  Downloading pip-22.0.4-py3-none-any.whl (2.1 MB)\n\u001b[K     |████████████████████████████████| 2.1 MB 14.9 MB/s \n\u001b[?25hInstalling collected packages: pip\n  Attempting uninstall: pip\n    Found existing installation: pip 20.1.1\n    Uninstalling pip-20.1.1:\n      Successfully uninstalled pip-20.1.1\nSuccessfully installed pip-22.0.4\nNote: you may need to restart the kernel to use updated packages.\n",
+     "output_type": "stream"
+    }
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": "# Start Working",
+   "metadata": {
+    "cell_id": "457b7bc84c934c388116f62302e6c15f",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 66
+   },
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "source": "",
+   "metadata": {
+    "cell_id": "840709fbc84d4443b47baf2e0922b6d2",
     "tags": [],
     "deepnote_cell_type": "code"
    },
